⚡️ some fixes for pure performance